# HackStorm-2.0

./: .gitignore  README.md  package-lock.json
docs/: 00-environment-setup.md  01-hardware-bringup.md  02-scene-reading-and-tts.md
firmware/smart_cane/: CMakeLists.txt
firmware/smart_cane/src/: smart_cane.c
firmware/smart_cane_hw_output/: CMakeLists.txt  app_default.config  build_errors.txt
firmware/smart_cane_hw_output/src/: hw_output.c
firmware/smart_cane_t5ai_demo/: CMakeLists.txt  app_default.config
firmware/smart_cane_t5ai_demo/src/: smart_cane_t5ai_demo.c
firmware/speaker_test/: CMakeLists.txt  app_default.config
firmware/speaker_test/src/: speaker_test.c
mobile_app/: App.js  SETUP.md  app.json  package-lock.json  package.json
smartCaneAccelerometer/: smartCaneAccelerometer.ino
smartCaneSensor/: smartCaneSensor.ino
tools/: scene_prompt.txt  scene_prompt_always_on.txt  scene_server.py  smart_cane_app.py  tts.py  vision_test.py
